5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1643_2446.log
== TEST (2019-04-13 22:36:56) 
-- CODE:
a = int(input("Digite uma senha de seis digitos: "))
a1 = a // 100000
b= a % 100000
b1= b // 10000
c = b % 10000
c1 = c // 1000
d = c % 1000
d1 = d // 100
e = d % 100
e1 = e // 10
f = e % 10
f1 = e // 1
soma1 = b1 + d1 + f1
soma2 = a1 + c1 + e1
multiplo = soma2/soma1
if (multiplo =! int):
	print("senha invalida")
else : 
	print("senha liberada")
-- ERROR:
File "XXXX", line 16
    if (multiplo =! int):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:37:37) 
-- CODE:
a = int(input("Digite uma senha de seis digitos: "))
a1 = a // 100000
b= a % 100000
b1= b // 10000
c = b % 10000
c1 = c // 1000
d = c % 1000
d1 = d // 100
e = d % 100
e1 = e // 10
f = e % 10
f1 = e // 1
soma1 = b1 + d1 + f1
soma2 = a1 + c1 + e1
multiplo = soma2/soma1
if (multiplo > 0):
	print("senha invalida")
else : 
	print("senha liberada")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:37:52) 
-- CODE:
a = int(input("Digite uma senha de seis digitos: "))
a1 = a // 100000
b= a % 100000
b1= b // 10000
c = b % 10000
c1 = c // 1000
d = c % 1000
d1 = d // 100
e = d % 100
e1 = e // 10
f = e % 10
f1 = e // 1
soma1 = b1 + d1 + f1
soma2 = a1 + c1 + e1
multiplo = soma2/soma1
if (multiplo > 0):
	print("senha invalida")
else : 
	print("senha liberada")
-- EXECUTION TIME:
0.186928
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:37:55) 
-- CODE:
a = int(input("Digite uma senha de seis digitos: "))
a1 = a // 100000
b= a % 100000
b1= b // 10000
c = b % 10000
c1 = c // 1000
d = c % 1000
d1 = d // 100
e = d % 100
e1 = e // 10
f = e % 10
f1 = e // 1
soma1 = b1 + d1 + f1
soma2 = a1 + c1 + e1
multiplo = soma2/soma1
if (multiplo > 0):
	print("senha invalida")
else : 
	print("senha liberada")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:38:26) 
-- CODE:
a = int(input("Digite uma senha de seis digitos: "))
a1 = a // 100000
b= a % 100000
b1= b // 10000
c = b % 10000
c1 = c // 1000
d = c % 1000
d1 = d // 100
e = d % 100
e1 = e // 10
f = e % 10
f1 = e // 1
soma1 = b1 + d1 + f1
soma2 = a1 + c1 + e1
multiplo = soma2/soma1
if (multiplo < 0):
	print("senha invalida")
else : 
	print("senha liberada")
-- EXECUTION TIME:
0.187537
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha liberada
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha liberada
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha liberada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:38:29) 
-- CODE:
a = int(input("Digite uma senha de seis digitos: "))
a1 = a // 100000
b= a % 100000
b1= b // 10000
c = b % 10000
c1 = c // 1000
d = c % 1000
d1 = d // 100
e = d % 100
e1 = e // 10
f = e % 10
f1 = e // 1
soma1 = b1 + d1 + f1
soma2 = a1 + c1 + e1
multiplo = soma2/soma1
if (multiplo < 0):
	print("senha invalida")
else : 
	print("senha liberada")
-- OUTPUT:
senha liberada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:24:15) 
-- CODE:
a = int(input("Digite uma senha de seis digitos: "))
a1 = a // 100000
b= a % 100000
b1= b // 10000
c = b % 10000
c1 = c // 1000
d = c % 1000
d1 = d // 100
e = d % 100
e1 = e // 10
f = e % 10
f1 = e // 1
soma1 = b1 + d1 + f1
soma2 = a1 + c1 + e1
multiplo = soma2%soma1
if (multiplo == 0 ):
	print("acesso liberado")
else : 
	print("senha invalida")
-- EXECUTION TIME:
0.120637
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:25:31) 
-- CODE:
a = int(input("Digite uma senha de seis digitos: "))
a1 = a // 100000
b= a % 100000
b1= b // 10000
c = b % 10000
c1 = c // 1000
d = c % 1000
d1 = d // 100
e = d % 100
e1 = e // 10
f = e % 10
f1 = e // 1
soma1 = b + d + f
soma2 = a + c + e
multiplo = soma2%soma1
if (multiplo == 0 ):
	print("acesso liberado")
else : 
	print("senha invalida")
-- EXECUTION TIME:
0.159112
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:27:16) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))
a = senha // 100000
a1= a % 100000
b= a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1 // 1
soma1 = b + d + f
soma2 = a + c + e
multiplo = soma2%soma1
if (multiplo == 0 ):
	print("acesso liberado")
else : 
	print("senha invalida")
-- EXECUTION TIME:
0.234806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2446/main.py", line 15, in <module>
    multiplo = soma2%soma1
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:28:23) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1= a % 100000

b= a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

soma1 = b + d + f
soma2 = a + c + e
multiplo = soma1%soma2
if (multiplo == 0 ):
	print("acesso liberado")
else : 
	print("senha invalida")
-- EXECUTION TIME:
0.134865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2446/main.py", line 22, in <module>
    multiplo = soma1%soma2
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:29:18) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1= a % 100000

b= a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

s1 = b + d + f
s2 = a + c + e
m = s1 % s2
if m == 0 :
	print("acesso liberado")
else : 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    m = s1 % s2
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:31:38) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1= a % 100000

b= a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

s1 = b + d + f
s2 = a + c + e
m = s2//s1

if m > 0 :
	print("acesso liberado")
else : 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    m = s2//s1
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:31:56) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1= a % 100000

b= a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

s1 = b + d + f
s2 = a + c + e
m = s2//s1

if m > 0 :
	print("acesso liberado")
else : 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    m = s2//s1
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:32:31) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1= a % 100000

b= a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

s1 = b + d + f
s2 = a + c + e
m = s2//s1

if m > 0 :
	print("acesso liberado")
else : 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    m = s2//s1
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:33:41) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1= a % 100000

b= a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

s1 = b + d + f
s2 = a + c + e
m = s2//s1
m1 = s2 % s1
if (m1==0) :
	print("acesso liberado")
else : 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    m = s2//s1
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:34:44) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1= a % 100000

b= a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

s1 = b + d + f
s2 = a + c + e
m = s2%s1

if (m==0) :
	print("acesso liberado")
else : 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    m = s2%s1
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:38:19) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1= a % 100000

b= a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

s1 = b + d + f
s2 = a + c + e
m = s1%s2

if (m==0) :
	print("acesso liberado")
else : 
	print("senha invalida")
-- EXECUTION TIME:
0.30204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2446/main.py", line 22, in <module>
    m = s1%s2
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:43:34) 
-- CODE:
senha = int(input("Digite uma senha de seis digitos: "))

a = senha // 100000
a1 = senha % 100000

b = a1 // 10000
b1 = a1 % 10000

c = b1 // 1000
c1 = b1 % 1000

d = c1 // 100
d1 = c1 % 100

e = d1 // 10
e1 = d1 % 10

f = e1 // 1

s1 = b + d + f
s2 = a + c + e
m = s1%s2

if (m==0):
	print("acesso liberado")
	
else:
	print("senha invalida")
-- EXECUTION TIME:
0.117885
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
